terraform_day-4-full-networking/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "abhi_igw"
  }
  
}
