terraform_day-4-full-networking/vpc.tf
resource "aws_vpc" "vpctest" {
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = var.vpc_name
    }
  
}
